--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -84,7 +84,7 @@
 
 .input {
     padding: 5px 0px;
-    width: 353px;
+    width: 100%;
     border: none;
     border-bottom: 1px solid #888;
     resize: none;
@@ -98,7 +98,7 @@
 
 .contactForm button {
     margin-top: 55px;
-    width: 353px;
+    width: 100%;
     height: 59px;
     text-align: center;
     border-radius: 50px;
@@ -108,4 +108,340 @@
     font-size: 18px;
     color: #FFF;
     font-weight: 700;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+        padding: 10px 10px;
+    }
+
+    .contactTitle {
+        width: 100%;
+        padding: 10px 10px;
+    }
+
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 640px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+}
+
+@media screen and (max-width: 1180px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 630px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+
+@media screen and (max-width: 1150px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 600px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+@media screen and (max-width: 1130px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 580px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+@media screen and (max-width: 1110px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 560px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+
+@media screen and (max-width: 1090px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+        display: block;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 100%;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+    .contactForm {
+        justify-content: center;
+        align-items: center;
+        justify-content: center;
+        margin: 50px auto;
+    }
+
+}
+
+
+@media screen and (max-width: 720px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 640px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+
+
+@media screen and (max-width: 680px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 610px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+@media screen and (max-width: 650px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 580px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+@media screen and (max-width: 615px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 550px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+
+@media screen and (max-width: 588px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 500px;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+}
+
+
+@media screen and (max-width: 535px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactCard {
+        padding: 23px 31px;
+        width: 100%;
+        height: 113px;
+        border-radius: 30px;
+        background: #FFF;
+    }
+
+    .contactForm {
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 470px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+
+    .contactForm {
+        padding: 20px 20px;
+    }
+
+}
+
+
+@media screen and (max-width: 476px) {
+    .container {
+        width: 100%;
+    }
+
+    .contact {
+        width: 100%;
+    }
+
+    .contactTitle {
+        width: 100%;
+    }
+    .phone {
+        display: block;
+    }
+
 }
